traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:17: error: not found: value i
    while(getY()!=i) {
                  ^